--- a/package.json
+++ b/package.json
@@ -63,7 +63,11 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.4",
     "vaul": "^0.9.9",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "isomorphic-dompurify": "2.31.0",
+    "@upstash/ratelimit": "2.0.7",
+    "@upstash/redis": "1.35.6",
+    "crypto": "1.0.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
