--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@uploadthing/react": "^7.3.3",
+    "@upstash/ratelimit": "2.0.7",
+    "@upstash/redis": "1.35.6",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -48,6 +50,7 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "isomorphic-dompurify": "2.31.0",
     "lucide-react": "^0.454.0",
     "next": "16.0.0",
     "next-themes": "^0.4.6",
@@ -63,11 +66,7 @@
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.7.4",
     "vaul": "^0.9.9",
-    "zod": "3.25.76",
-    "isomorphic-dompurify": "2.31.0",
-    "@upstash/ratelimit": "2.0.7",
-    "@upstash/redis": "1.35.6",
-    "crypto": "1.0.1"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
